--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Kiko Now
+name: Changdae Lee
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 장래희망 = 한량 
 
 #
 # Flags below are optional
@@ -20,16 +20,16 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # and URL Link(e.g. 'Theme' tab below) tabs. If you don't need one, just delete
 # it from the list(Delete '- name: ' and 'url: ', too!)
 navigation:
-  - name: Blog
-    url: /
   - name: About
     url: /about
+  - name: Blog
+    url: /
   - name: Archive
     url: /archive
   - name: Tags
     url: /tags
-  - name: Theme
-    url: https://github.com/AWEEKJ/kiko-now
+  - name: Github 
+    url: https://github.com/changdae-lee/
 
 # Pagination
 paginate: 5
@@ -97,10 +97,10 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-plugins:
+plugins_dir:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-  - jekyll-paginate
+#  - jekyll-paginate
 
 # Exclude these files from your production _site
 exclude:
@@ -109,3 +109,5 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+
+gems: [jekyll-paginate] 
