--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 #
 
 # Name of your site (displayed in the header)
-name: Changdae Lee
+name: 개복치
 
 # Short bio or description (displayed in the header)
-description: 장래희망 = 한량 
+description: 모든 것을 기록으로 
 
 #
 # Flags below are optional
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://user-images.githubusercontent.com/30650374/47948224-1a936a80-df70-11e8-9461-00901af88e9d.png
 
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
@@ -26,10 +26,8 @@ navigation:
     url: /
   - name: Archive
     url: /archive
-  - name: Tags
+  - name: Categories 
     url: /tags
-  - name: Github 
-    url: https://github.com/changdae-lee/
 
 # Pagination
 paginate: 5
@@ -41,7 +39,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: AWEEKJ/kiko-now
+  github: changdae-lee 
   googleplus: # anything in your profile username that comes after plus.google.com/
   instagram:
   linkedin:
