--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: 개복치
 
 # Short bio or description (displayed in the header)
-description: 모든 것을 기록으로 
+description: 기록 저장소
 
 #
 # Flags below are optional
