cetegories to tags

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navigation:
     url: /
   - name: Archive
     url: /archive
-  - name: Categories 
+  - name: Tags 
     url: /tags
 
 # Pagination
