--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: 개복치
+name: Great. Lee
 
 # Short bio or description (displayed in the header)
-description: 기록 저장소
+description: Development & Thought
 
 #
 # Flags below are optional
