--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: changdae-lee 
+  github: greatleee 
   googleplus: # anything in your profile username that comes after plus.google.com/
   instagram:
   linkedin:
@@ -51,7 +51,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # Text under the icons in footer
-footer-text: © 2017 Kiko Now
+footer-text: © 2019 great lee
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
@@ -108,4 +108,4 @@ exclude:
   - README.md
   - CNAME
 
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
